add validations and partial fiel display

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,4 +11,69 @@ en:
           remember_me: "Запомнить меня"
           current_password: "Текущий пароль"
           is_antok_member: "Являюсь членом АНТОК"
+        applic:
+          fio: "ФИО"
+          fio_eng: "ФИО по-английски"
+          birth_date: "Дата рождения"
+          sex: "Пол"
+          post_address: "Почтовый адрес"
+          phones: "Телефоны (мобильный / рабочий / домашний / факс)"
+          edu_institute: "Институт"
+          edu_institute_address: "Адрес института"
+          edu_specialization: "Специализация / направление обучения"
+          uch_stepen: "Ученая степень, ученое звание, диплом специалиста, бакалавра, магистра и год получения / студентам указывать курс"
+          work_company: "Название организации"
+          work_start_year: "Год начала работы в организации"
+          work_department: "Подразделение / отдел / департамент / кафедра"
+          work_position: "Должность"
+          work_specialization: "Специализация (пример: химия, энергетика, авиастроение, новые материалы, биотехнологии, прикладная математика, ИТ)"
+          antok_city: "Ближайшее подразделение АНТОК (Москва, Воронеж, Екатеринбург, Новосибирск, Дальний Восток, Красноярск)"
+          public_organizations: "Участие в других общественных организациях"
+          science_interests: "Область научных/профессиональных интересов"
+          conf_topic: "Тема доклада"
+          conf_section: "Секция конференции (в соответствии с проектом программы)"
+          conf_coauthors: "Соавторы (при наличии)"
+          participation_type: "Тип участия (очное или заочное)"
     hello: "Hello world"
+    edit_your_application: "Отредактируйте вашу анкету"
+    your_application_details: "Информация по вашей заявке"
+    home: "На главную"
+    edit: "Редактировать"
+    save: "Сохранить"
+    cancel: "Отмена"
+    sign_up: "Зарегистрироваться"
+    sign_up_to_contest: "Подать заявку на конкурс"
+    create_my_account: "Заргегистрировать"
+    application_updated_successfuly: "Ваша заявка успешна сохранена"
+    application_sent: "Ваша заявка отправлена"
+    grant_contest: "Конкурс грантов АНТОК!"
+    grant_contest_description: "Конкурс грантов АНТОК для молодежи - российских корейцев"
+    view_application: "Посмотреть мою заявку"
+    your_status: "1. Ваш текущий статус"
+    your_event: "2. Отметьте, в каком мероприятии хотите участвовать (можно отметить несколько)"
+    your_specialization: "4. Ваше направление подготовки/специализация"
+    your_personal_info: "3. Персональные данные"
+    your_add_info: "5. Дополнительная информация"
+    your_bal: "Академическая успеваемость (информация должна быть подтверждена документально)"
+    your_social: "Опыт участия в общественной работе"
+    your_recomendations: "Наличие рекомендаций для участия в конкурсе грантов АНТОК (информация должна быть подтверждена документально)"
+    your_esse: "6. Вопросы-эссе (обязательны для заполнения)"
+    welcome_aksts: "Конкурс грантов АНТОК"
+    welcome_aksts_description: "Конкурс грантов АНТОК для молодежи - российских корейцев!"
+    welcome_to_aksts: "Добро пожаловать в АНТОК!"
+    welcome_email_subject: "Добро пожаловать на сайт АНТОК"
+    password_reset_email_subject: "Сброс пароля на сайте АНТОК"
+    profile_updated: "Ваш профиль был обновлен"
+    user_destroyed: "Пользователь удален"
+    you_can_not_delete_youself: "Нельзя удалить себя"
+    email_sent_with_password_reset_instructions: "Отправлено эл. письмо с инструкцией по смене пароля"
+    password_reset_has_expired: "Ссылка для изменения пароля просрочена"
+    password_has_been_reset: "Пароль был изменен"
+    message_saved: "Новость сохранена"
+    message_updated_successfuly: "Новость успешно обновлена"
+    new_message: "Создать новость"
+    messages_list: "К списку новостей"
+    too_long_twit: "Длина твита не должна превышать 140 знаков. Длина вашего: "
+    your_sex: "Ваш пол"
+    please_sign_in: "Пожалуйста войдите в систему"
+    you_already_have_application: "У вас уже есть заявка на конференцию"
