--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -278,12 +278,12 @@ en:
           work_department: "Подразделение / отдел / департамент / кафедра"
           work_position: "Должность"
           work_specialization: "Специализация (пример: химия, энергетика, авиастроение, новые материалы, биотехнологии, прикладная математика, ИТ)"
-          antok_city: "Ближайшее подразделение АНТОК (Москва, Воронеж, Екатеринбург, Новосибирск, Дальний Восток, Красноярск)"
+          antok_city: "Ближайшее подразделение АНТОК"
           public_organizations: "Участие в других общественных организациях"
           science_interests: "Область научных/профессиональных интересов"
           conf_topic: "Тема доклада"
           conf_section: "Секция конференции (в соответствии с проектом программы)"
-          conf_coauthors: "Соавторы (при наличии)"
+          conf_coauthors: "Соавторы (указываются при наличии: ФИО, место работы, должность, почта)"
           participation_type: "Тип участия (очное или заочное)"
     hello: "Hello world"
     edit_your_application: "Отредактируйте вашу анкету"
