applics improvements and sendmail

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -260,7 +260,7 @@ en:
           remember_me: "Запомнить меня"
           current_password: "Текущий пароль"
           is_antok_member: "Являюсь членом АНТОК"
-          antok_id: "ID АНТОК (заполняется для членов АНТОК)"
+          antok_id: "ID АНТОК (заполняется для членов АНТОК, свой ID можно узнать у Елены Хе - elenakhe@ngs.ru)"
           cant_be_blank: "не может быть пустым"
         applic:
           fio: "ФИО"
@@ -268,7 +268,7 @@ en:
           birth_date: "Дата рождения"
           sex: "Пол"
           post_address: "Почтовый адрес"
-          phones: "Телефоны (мобильный / рабочий / домашний / факс)"
+          phones: "Телефоны с кодом города (мобильный / рабочий / домашний / факс)"
           edu_institute: "Институт"
           edu_institute_address: "Адрес института"
           edu_specialization: "Специализация / направление обучения"
@@ -282,7 +282,7 @@ en:
           public_organizations: "Участие в других общественных организациях"
           science_interests: "Область научных/профессиональных интересов"
           conf_topic: "Тема доклада"
-          conf_section: "Секция конференции (в соответствии с проектом программы)"
+          conf_section: "Направление"
           conf_coauthors: "Соавторы (указываются при наличии: ФИО, место работы, должность, почта)"
           participation_type: "Тип участия (очное или заочное)"
     hello: "Hello world"
