--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -328,3 +328,4 @@ en:
     your_sex: "Ваш пол"
     please_sign_in: "Пожалуйста войдите в систему"
     you_already_have_application: "У вас уже есть заявка на конференцию"
+    application_registered: "Зарегистрирована заявка на конференцию АНТОК-2014"
