--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -125,6 +125,7 @@ en:
       messages:
         accepted: нужно подтвердить
         blank: не может быть пустым
+        should_be_1920_1990: должна быть от 1920 до 1990 года
         confirmation: не совпадает с подтверждением
         empty: не может быть пустым
         equal_to: может иметь лишь значение, равное %{count}
@@ -265,7 +266,7 @@ en:
         applic:
           fio: "ФИО"
           fio_eng: "ФИО по-английски"
-          birth_date: "Дата рождения"
+          birth_date: "Дата рождения (формат ГГГГ-ММ-ДД)"
           sex: "Пол"
           post_address: "Почтовый адрес"
           phones: "Телефоны с кодом города (мобильный / рабочий / домашний / факс)"
@@ -284,7 +285,7 @@ en:
           conf_topic: "Тема доклада"
           conf_section: "Направление"
           conf_coauthors: "Соавторы (указываются при наличии: ФИО, место работы, должность, почта)"
-          participation_type: "Тип участия (очное или заочное)"
+          participation_type: "Тип участия"
     hello: "Hello world"
     edit_your_application: "Отредактируйте вашу анкету"
     your_application_details: "Информация по вашей заявке"
