--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -330,3 +330,4 @@ en:
     please_sign_in: "Пожалуйста войдите в систему"
     you_already_have_application: "У вас уже есть заявка на конференцию"
     application_registered: "Зарегистрирована заявка на конференцию АНТОК-2014"
+    in_development: "Тут будут данные участника... пока еще не готово :)"
