--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -331,3 +331,18 @@ en:
     you_already_have_application: "У вас уже есть заявка на конференцию"
     application_registered: "Зарегистрирована заявка на конференцию АНТОК-2014"
     in_development: "Тут будут данные участника... пока еще не готово :)"
+    anketa: "Анкета участника конференции АНТОК-2014"
+    personal_info: "Персональная информация"
+    education: "Образование"
+    work: "Работа"
+    additional_info: "Дополнительная информация"
+    applicaion_info: "Заявка на конференцию"
+    yes1: "Да"
+    no1: "Нет"
+    id_antok: "ID АНТОК"
+    application_number: "Номер заявки"
+    application_date: "Дата подачи заявки"
+    phones: "Телефоны (моб/раб/дом/факс)"
+    birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
+    work_specialization: "Специализация"
+    conf_coauthors: "Соавторы"
