--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -286,51 +286,11 @@ ru:
           conf_section: "Направление"
           conf_coauthors: "Соавторы (указываются при наличии: ФИО, место работы, должность, почта)"
           participation_type: "Тип участия"
-    hello: "Hello world"
-    edit_your_application: "Отредактируйте вашу анкету"
-    your_application_details: "Информация по вашей заявке"
-    home: "На главную"
-    edit: "Редактировать"
-    save: "Сохранить"
-    cancel: "Отмена"
     sign_up: "Зарегистрироваться"
-    sign_up_to_contest: "Подать заявку на конкурс"
-    create_my_account: "Заргегистрировать"
-    application_updated_successfuly: "Ваша заявка успешна сохранена"
-    application_sent: "Ваша заявка отправлена"
-    grant_contest: "Конкурс грантов АНТОК!"
-    grant_contest_description: "Конкурс грантов АНТОК для молодежи - российских корейцев"
-    view_application: "Посмотреть мою заявку"
-    your_status: "1. Ваш текущий статус"
-    your_event: "2. Отметьте, в каком мероприятии хотите участвовать (можно отметить несколько)"
-    your_specialization: "4. Ваше направление подготовки/специализация"
-    your_personal_info: "3. Персональные данные"
-    your_add_info: "5. Дополнительная информация"
-    your_bal: "Академическая успеваемость (информация должна быть подтверждена документально)"
-    your_social: "Опыт участия в общественной работе"
-    your_recomendations: "Наличие рекомендаций для участия в конкурсе грантов АНТОК (информация должна быть подтверждена документально)"
-    your_esse: "6. Вопросы-эссе (обязательны для заполнения)"
-    welcome_aksts: "Конкурс грантов АНТОК"
-    welcome_aksts_description: "Конкурс грантов АНТОК для молодежи - российских корейцев!"
-    welcome_to_aksts: "Добро пожаловать в АНТОК!"
-    welcome_email_subject: "Добро пожаловать на сайт АНТОК"
-    password_reset_email_subject: "Сброс пароля на сайте АНТОК"
-    profile_updated: "Ваш профиль был обновлен"
-    user_destroyed: "Пользователь удален"
-    you_can_not_delete_youself: "Нельзя удалить себя"
-    email_sent_with_password_reset_instructions: "Отправлено эл. письмо с инструкцией по смене пароля"
-    password_reset_has_expired: "Ссылка для изменения пароля просрочена"
-    password_has_been_reset: "Пароль был изменен"
-    message_saved: "Новость сохранена"
-    message_updated_successfuly: "Новость успешно обновлена"
-    new_message: "Создать новость"
-    messages_list: "К списку новостей"
-    too_long_twit: "Длина твита не должна превышать 140 знаков. Длина вашего: "
-    your_sex: "Ваш пол"
-    please_sign_in: "Пожалуйста войдите в систему"
+    save: "Сохранить"
+    cancel: "Отменить"
     you_already_have_application: "У вас уже есть заявка на конференцию"
     application_registered: "Зарегистрирована заявка на конференцию АНТОК-2014"
-    in_development: "Тут будут данные участника... пока еще не готово :)"
     anketa: "Анкета участника конференции АНТОК-2014"
     personal_info: "Персональная информация"
     education: "Образование"
@@ -346,3 +306,24 @@ ru:
     birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
     work_specialization: "Специализация"
     conf_coauthors: "Соавторы"
+    home_conf_antok: "Конференция АНТОК в Екатеринбурге, июль 2014"
+    home_link_home: "Главная"
+    home_link_conf: "О конференции"
+    home_link_prog: "Программа"
+    home_link_hotel: "Размещение"
+    home_link_sp: "Спонсоры"
+    home_link_log_out: "Выход"
+    home_link_log_in: "Вход"
+    home_welcome: "Добро пожаловать на конференцию АНТОК-2014 в Екатеринбург!"
+    home_lead: "В конференции АНТОК-2014 могут принять участие все желающие, в том числе члены научно-технических обществ корейцев России, а также стран СНГ, Европейского союза и Кореи. Программа конференции предусматривает возможность участия в ней специалистов из разных областей науки и техники. На конференции они смогут обсудить результаты последних научных и технологических разработок. Конференция состоится в Екатеринбурге в июле 2014 г."
+    sign_up_registration: "Регистрация на конференцию"
+    sign_up_info: "Шаг 1 из 2: Создание учетной записи участника конференции АНТОК"
+    step2_apply_btn: "Подать заявку (шаг 2)"
+    step2_view_btn: "Смотреть мою заявку"
+    step2_my_account_btn: "Моя учетная запись"
+    step2_title: "Заполнение заявки на конференцию"
+    step2_comment_short: "( Сокращенная форма анкеты для члена АНТОК )"
+    step2_comment_full: "( Расширенная форма анкеты для не членов АНТОК )"
+    step2_info: "Шаг 2 из 2: Подача заявки на участие в конференции"
+    step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных. После сохранения анкеты, внести изменения будет не возможно."
+    home_link: "На главную"
