--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -241,6 +241,8 @@ en:
         conf_coauthors: "Соавторы (указываются при наличии: ФИО, место работы, должность, почта)"
         participation_type: "Тип участия"
   sign_up: "Зарегистрироваться"
+  save: "Сохранить"
+  cancel: "Отменить"
   you_already_have_application: "У вас уже есть заявка на конференцию"
   application_registered: "Зарегистрирована заявка на конференцию АНТОК-2014"
   anketa: "Анкета участника конференции АНТОК-2014"
@@ -277,3 +279,5 @@ en:
   step2_comment_short: "( Сокращенная форма анкеты для члена АНТОК )"
   step2_comment_full: "( Расширенная форма анкеты для не членов АНТОК )"
   step2_info: "Шаг 2 из 2: Подача заявки на участие в конференции"
+  step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных. После сохранения анкеты, внести изменения будет не возможно."
+  home_link: "На главную"
