--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -327,3 +327,26 @@ ru:
     step2_info: "Шаг 2 из 2: Подача заявки на участие в конференции"
     step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных. После сохранения анкеты, внести изменения будет не возможно."
     home_link: "На главную"
+    application_sent: "Ваша заявка отправлена"
+    application_updated_successfuly: "Ваша заявка успешна сохранена"
+    please_sign_in: "Пожалуйста войдите в систему"
+    your_application_details: "Информация по вашей заявке"
+    edit_your_application: "Редактирование заявки на конференцию"
+    male: "Мужской"
+    female: "Женский"
+    choose_value: "Выберите значение..."
+    moscow: "Москва"
+    voronezh: "Воронеж"
+    ekaterinburg: "Екатеринбург"
+    novosibirsk: "Новосибирск"
+    krasnoyarsk: "Красноярск"
+    far_east: "Дальний Восток"
+    physics_maths: "Физика, математика"
+    it_nanothechnologies: "Информационные (IT) и нанотехнологии"
+    power_electrical_engineering: "Энергетика, электротехника, машиностроение, механика"
+    chemistry_new_materials: "Химия, новые материалы и технологии их обработки"
+    biotechnology_biology: "Биотехнологии, биология, технологии живых систем, океанография"
+    geology_natural_resources: "Геология, природные ресурсы"
+    social_sciences: "Общественные науки"
+    participance: "Очное"
+    publications_only: "Заочное"
