finish en localization

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,4 @@
-# Sample localization file for English. Add more files in this directory for other locales.
+﻿# Sample localization file for English. Add more files in this directory for other locales.
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
@@ -209,75 +209,110 @@ en:
   activerecord:
     attributes:
       user:
-        name: "ФИО" 
-        password: "Пароль"
-        password_confirmation: "Подтверждение пароля"
-        remember_me: "Запомнить меня"
-        current_password: "Текущий пароль"
-        is_antok_member: "Являюсь членом АНТОК"
-        antok_id: "ID АНТОК (заполняется для членов АНТОК, свой ID можно узнать у Елены Хе - elenakhe@ngs.ru)"
-        cant_be_blank: "не может быть пустым"
+        name: "Name (Last, first)" 
+        password: "Password"
+        password_confirmation: "Confirm password"
+        remember_me: "Remember me"
+        current_password: "Curent password"
+        is_antok_member: "Check if Foreign participant"
+        antok_id: "If Foreign participant type 'F'"
+        cant_be_blank: "the field cannot be blank"
       applic:
-        fio: "ФИО"
-        fio_eng: "ФИО по-английски"
-        birth_date: "Дата рождения (формат ГГГГ-ММ-ДД)"
-        sex: "Пол"
-        post_address: "Почтовый адрес"
-        phones: "Телефоны с кодом города (мобильный / рабочий / домашний / факс)"
-        edu_institute: "Институт"
-        edu_institute_address: "Адрес института"
-        edu_specialization: "Специализация / направление обучения"
-        uch_stepen: "Ученая степень, ученое звание, диплом специалиста, бакалавра, магистра и год получения / студентам указывать курс"
-        work_company: "Название организации"
-        work_start_year: "Год начала работы в организации"
-        work_department: "Подразделение / отдел / департамент / кафедра"
-        work_position: "Должность"
-        work_specialization: "Специализация (пример: химия, энергетика, авиастроение, новые материалы, биотехнологии, прикладная математика, ИТ)"
-        antok_city: "Ближайшее подразделение АНТОК"
-        public_organizations: "Участие в других общественных организациях"
-        science_interests: "Область научных/профессиональных интересов"
-        conf_topic: "Тема доклада"
-        conf_section: "Направление"
-        conf_coauthors: "Соавторы (указываются при наличии: ФИО, место работы, должность, почта)"
-        participation_type: "Тип участия"
-  sign_up: "Зарегистрироваться"
-  save: "Сохранить"
-  cancel: "Отменить"
-  you_already_have_application: "У вас уже есть заявка на конференцию"
-  application_registered: "Зарегистрирована заявка на конференцию АНТОК-2014"
-  anketa: "Анкета участника конференции АНТОК-2014"
-  personal_info: "Персональная информация"
-  education: "Образование"
-  work: "Работа"
-  additional_info: "Дополнительная информация"
-  applicaion_info: "Заявка на конференцию"
-  yes1: "Да"
-  no1: "Нет"
-  id_antok: "ID АНТОК"
-  application_number: "Номер заявки"
-  application_date: "Дата подачи заявки"
-  phones: "Телефоны (моб/раб/дом/факс)"
-  birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
-  work_specialization: "Специализация"
-  conf_coauthors: "Соавторы"
-  home_conf_antok: "Конференция АНТОК в Екатеринбурге, июль 2014"
-  home_link_home: "Главная"
-  home_link_conf: "О конференции"
-  home_link_prog: "Программа"
-  home_link_hotel: "Размещение"
-  home_link_sp: "Спонсоры"
-  home_link_log_out: "Выход"
-  home_link_log_in: "Вход"
-  home_welcome: "Добро пожаловать на конференцию АНТОК-2014 в Екатеринбург!"
-  home_lead: "В конференции АНТОК-2014 могут принять участие все желающие, в том числе члены научно-технических обществ корейцев России, а также стран СНГ, Европейского союза и Кореи. Программа конференции предусматривает возможность участия в ней специалистов из разных областей науки и техники. На конференции они смогут обсудить результаты последних научных и технологических разработок. Конференция состоится в Екатеринбурге в июле 2014 г."
-  sign_up_registration: "Регистрация на конференцию"
-  sign_up_info: "Шаг 1 из 2: Создание учетной записи участника конференции АНТОК"
-  step2_apply_btn: "Подать заявку (шаг 2)"
-  step2_view_btn: "Смотреть мою заявку"
-  step2_my_account_btn: "Моя учетная запись"
-  step2_title: "Заполнение заявки на конференцию"
-  step2_comment_short: "( Сокращенная форма анкеты для члена АНТОК )"
-  step2_comment_full: "( Расширенная форма анкеты для не членов АНТОК )"
-  step2_info: "Шаг 2 из 2: Подача заявки на участие в конференции"
-  step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных. После сохранения анкеты, внести изменения будет не возможно."
-  home_link: "На главную"
+        fio: "Name (Last, first)"
+        fio_eng: "Name (Last, first)"
+        birth_date: "Birth date (YYYY-MM-DD)"
+        sex: "Gender"
+        post_address: "Postal address"
+        phones: "Telephone with the country and city code (mobile/ office / home / fax)"
+        edu_institute: "Education: University"
+        edu_institute_address: "University address"
+        edu_specialization: "Specialization / Major"
+        uch_stepen: "Scientific degree, Year of obtaining the degree / Students should input the year of study"
+        work_company: "Work experience: Affiliation"
+        work_start_year: "I work for the company since (year)"
+        work_department: "Department"
+        work_position: "Position"
+        work_specialization: "Specialization (example: chemistry, power engineering, aerospace, new materials, biotechnologies, applied math, IT)"
+        antok_city: "Nearest AKSTS regional chapter (if applicable)"
+        public_organizations: "I'm a member of the following non-profit organizations (list)"
+        science_interests: "Field of scientific or professional interests"
+        conf_topic: "Title of my Conference talk is"
+        conf_section: "Field of science (choose one)"
+        conf_coauthors: "Co-authors (If applicable: Last and first namea, Affiliation, Position, E-mail address)"
+        participation_type: "Full time paticipation or Distance involved"
+  save: "Save"
+  cancel: "Cancel"
+  you_already_have_application: "You already have application"
+  application_registered: "The application to the AKSTS 2014 Comference has been submitted"
+  anketa: "Conference Participant's questionary"
+  personal_info: "Personal Information"
+  education: "Education"
+  work: "Work"
+  additional_info: "Additional information"
+  applicaion_info: "Application to the Conference"
+  yes1: "Yes"
+  no1: "No"
+  id_antok: "AKSTS Russia ID"
+  application_number: "Application ID"
+  application_date: "Date of submitting the Application"
+  phones: "Telephones (Mobile/Office/Home/Fax)"
+  birth_date: "Birth date (YYYY-MM-DD)"
+  work_specialization: "Specialization"
+  conf_coauthors: "Co-Authors"
+  home_conf_antok: "AKSTS Russia Conference in Yekaterinburg, July 2014"
+  home_link_home: "Main"
+  home_link_conf: "About"
+  home_link_prog: "Programm"
+  home_link_hotel: "Accomodation"
+  home_link_sp: "Sponsors"
+  home_link_log_out: "Log out"
+  home_link_log_in: "Log in"
+  home_welcome: "Welcome to 2014 AKSTS Russia Conference in Yekaterinberg!"
+  home_lead: "Everyone can join the 2014 AKSTS Russia Conference including the members of AKSTS Russia, Associations of Korean Scientists and Engineers of the Commonwealth of Independent States, European Union and Korea. Conference Program unify the specialists from many fields of science and technology. During the Conference the results of scientific and technological researches will be presented and discussied. The conference will take place in Yekaterinburg city in July 2014."
+  sign_up_registration: "Register"
+  sign_up_info: "Step 1 out of 2: Create new account of the Conference participant"
+  step2_apply_btn: "Submit the application (step 2)"
+  step2_view_btn: "Browse my application"
+  step2_my_account_btn: "My account"
+  step2_title: "Application filling out"
+  step2_comment_short: "( form for Foreign participants )"
+  step2_comment_full: "( Detailed form for all participants )"
+  step2_info: "Step 2 out of 2: Application submitting"
+  step2_warning: "Please, check the application before submitting. After the submitting it will become unedittablte."
+  home_link: "Main page"
+  application_sent: "Your application has been sent"
+  application_updated_successfuly: "Your application has been updated"
+  please_sign_in: "Please sign in"
+  your_application_details: "Your application details"
+  edit_your_application: "Edit your application"
+  male: "Male"
+  female: "Female"
+  choose_value: "Choose value..."
+  moscow: "Moscow"
+  voronezh: "Voronezh"
+  ekaterinburg: "Yekaterinburg"
+  novosibirsk: "Novosibirsk"
+  krasnoyarsk: "Krasnoyarsk"
+  far_east: "Far East"
+  physics_maths: "Physics, Maths"
+  it_nanothechnologies: "Information- (IT) and Nano- thechnologies"
+  power_electrical_engineering: "Power and Electrical engineering, Machinery, Mechanics"
+  chemistry_new_materials: "Chemistry, New materials and the Treatment technologies"
+  biotechnology_biology: "Biotechnology, Biology, Living systems technology, Oceanography"
+  geology_natural_resources: "Geology, Natural resources"
+  social_sciences: "Social sciences"
+  participance: "Full time paticipation"
+  publications_only: "Distance involved"
+  sign_in: "Sign in"
+  sign_up: "Sign up"
+  forgot_pass: "Forgot your password?"
+  no_confirmation: "Didn't receive confirmation instructions?"
+  no_unlock: "Didn't receive unlock instructions?"
+  edit_account: "Edit account"
+  leave_it_blank: "leave it blank if you don't want to change it"
+  we_need_your_current_password: "we need your current password to confirm your changes"
+  update: "Update"
+  unhappy: "Unhappy"
+  cancel_my_account: "Cancel my account"
+  are_you_sure: "Are you sure"
+  back: "Back"
