--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -286,7 +286,6 @@ ru:
           conf_section: "Направление"
           conf_coauthors: "Соавторы (указываются при наличии: ФИО, место работы, должность, почта)"
           participation_type: "Тип участия"
-    sign_up: "Зарегистрироваться"
     save: "Сохранить"
     cancel: "Отменить"
     you_already_have_application: "У вас уже есть заявка на конференцию"
@@ -350,3 +349,16 @@ ru:
     social_sciences: "Общественные науки"
     participance: "Очное"
     publications_only: "Заочное"
+    sign_in: "Вход"
+    sign_up: "Регистрация"
+    forgot_pass: "Забыли пароль?"
+    no_confirmation: "Не получили инструкцию по подтверждению аккаунта?"
+    no_unlock: "Не получили инструкцию по восстановлению аккаунта?"
+    edit_account: "Редактировать аккаунт"
+    leave_it_blank: "оставьте пустым если не хотите изменять"
+    we_need_your_current_password: "нужен текущий пароль, чтобы сохранить изменения"
+    update: "Сохранить"
+    unhappy: "Несчастны"
+    cancel_my_account: "Удалить мой аккаунт"
+    are_you_sure: "Вы уверены"
+    back: "Назад"
