improve foreigner registration

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -214,9 +214,10 @@ en:
         password_confirmation: "Confirm password"
         remember_me: "Remember me"
         current_password: "Curent password"
-        is_antok_member: "Check if Foreign participant"
-        antok_id: "If Foreign participant type 'F'"
+        is_antok_member: "Check if AKSTS Russia member"
+        antok_id: "Your AKSTS ID"
         cant_be_blank: "the field cannot be blank"
+        is_foreign: "Check if Foreign participant"
       applic:
         fio: "Name (Last, first)"
         fio_eng: "Name (Last, first)"
@@ -243,7 +244,7 @@ en:
   save: "Save"
   cancel: "Cancel"
   you_already_have_application: "You already have application"
-  application_registered: "The application to the AKSTS 2014 Comference has been submitted"
+  application_registered: "The application to the AKSTS 2014 Conference has been submitted"
   anketa: "Conference Participant's questionary"
   personal_info: "Personal Information"
   education: "Education"
@@ -316,3 +317,6 @@ en:
   cancel_my_account: "Cancel my account"
   are_you_sure: "Are you sure"
   back: "Back"
+  application_id_number: "Your application number"
+  questions_application: "If you have question or wish to correnct the application email to AKSTSRussia@gmail.com"
+  abstracts: "Abstracts for registered participants should be submitted by e-mail AKSTSRussia@gmail.com until the 15th of May 2014. Template for the Abstracts enclosed."  
