fill program page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -263,7 +263,7 @@ en:
   home_conf_antok: "AKSTS Russia Conference in Yekaterinburg, July 2014"
   home_link_home: "Main"
   home_link_conf: "About"
-  home_link_prog: "Programm"
+  home_link_prog: "Program"
   home_link_hotel: "Accomodation"
   home_link_sp: "Sponsors"
   home_link_log_out: "Log out"
