--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -261,7 +261,7 @@ en:
   work_specialization: "Specialization"
   conf_coauthors: "Co-Authors"
   home_conf_antok: "AKSTS Russia Conference in Yekaterinburg, July 2014"
-  home_link_home: "Main"
+  home_link_home: "Home"
   home_link_conf: "About"
   home_link_prog: "Program"
   home_link_hotel: "Accomodation"
