--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -260,8 +260,8 @@ ru:
           password_confirmation: "Подтверждение пароля"
           remember_me: "Запомнить меня"
           current_password: "Текущий пароль"
-          is_antok_member: "Являюсь членом АНТОК"
-          antok_id: "ID АНТОК (заполняется для членов АНТОК, свой ID можно узнать у Елены Хе - elenakhe@ngs.ru)"
+          is_antok_member: "Являюсь членом научно-технического общества корейцев"
+          antok_id: "ID (заполняется для членов общества, свой ID можно узнать у Елены Хе - elenakhe@ngs.ru)"
           cant_be_blank: "не может быть пустым"
           is_foreign: "Являюсь иностранным участником"
         applic:
@@ -306,7 +306,7 @@ ru:
     birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
     work_specialization: "Специализация"
     conf_coauthors: "Соавторы"
-    home_conf_antok: "Конференция АНТОК в Екатеринбурге, июль 2014"
+    home_conf_antok: "Научная конференция Екатеринбурге, июль 2014"
     home_link_home: "Главная"
     home_link_conf: "О конференции"
     home_link_prog: "Программа"
@@ -314,10 +314,10 @@ ru:
     home_link_sp: "Спонсоры"
     home_link_log_out: "Выход"
     home_link_log_in: "Вход"
-    home_welcome: "Добро пожаловать на конференцию АНТОК-2014 в Екатеринбург!"
-    home_lead: "В конференции АНТОК-2014 могут принять участие все желающие, в том числе члены научно-технических обществ корейцев России, а также стран СНГ, Европейского союза и Кореи. Программа конференции предусматривает возможность участия в ней специалистов из разных областей науки и техники. На конференции они смогут обсудить результаты последних научных и технологических разработок. Конференция состоится в Екатеринбурге в июле 2014 г."
+    home_welcome: "Добро пожаловать на научную конференцию 2014 года в Екатеринбург!"
+    home_lead: "В конференции могут принять участие все желающие, в том числе члены научно-технических обществ корейцев России, а также стран СНГ, Европейского союза и Кореи. Программа конференции предусматривает возможность участия в ней специалистов из разных областей науки и техники. На конференции они смогут обсудить результаты последних научных и технологических разработок. Конференция состоится в Екатеринбурге в июле 2014 г."
     sign_up_registration: "Регистрация на конференцию"
-    sign_up_info: "Шаг 1 из 2: Создание учетной записи участника конференции АНТОК"
+    sign_up_info: "Шаг 1 из 2: Создание учетной записи участника конференции"
     step2_apply_btn: "Подать заявку (шаг 2)"
     step2_view_btn: "Смотреть мою заявку"
     step2_my_account_btn: "Моя учетная запись"
