--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -214,8 +214,8 @@ en:
         password_confirmation: "Confirm password"
         remember_me: "Remember me"
         current_password: "Curent password"
-        is_antok_member: "Check if AKSTS Russia member"
-        antok_id: "Your AKSTS ID"
+        is_antok_member: "Check if member of korean scientific society of Russia"
+        antok_id: "Your ID"
         cant_be_blank: "the field cannot be blank"
         is_foreign: "Check if Foreign participant"
       applic:
@@ -260,7 +260,7 @@ en:
   birth_date: "Birth date (YYYY-MM-DD)"
   work_specialization: "Specialization"
   conf_coauthors: "Co-Authors"
-  home_conf_antok: "AKSTS Russia Conference in Yekaterinburg, July 2014"
+  home_conf_antok: "Science Conference in Yekaterinburg, July 2014"
   home_link_home: "Home"
   home_link_conf: "About"
   home_link_prog: "Program"
@@ -268,8 +268,8 @@ en:
   home_link_sp: "Sponsors"
   home_link_log_out: "Log out"
   home_link_log_in: "Log in"
-  home_welcome: "Welcome to 2014 AKSTS Russia Conference in Yekaterinberg!"
-  home_lead: "Everyone can join the 2014 AKSTS Russia Conference including the members of AKSTS Russia, Associations of Korean Scientists and Engineers of the Commonwealth of Independent States, European Union and Korea. Conference Program unify the specialists from many fields of science and technology. During the Conference the results of scientific and technological researches will be presented and discussied. The conference will take place in Yekaterinburg city in July 2014."
+  home_welcome: "Welcome to 2014 Science Conference in Yekaterinberg!"
+  home_lead: "Everyone can join the 2014 Science Conference including the members of korean scientific society of Russia, Associations of Korean Scientists and Engineers of the Commonwealth of Independent States, European Union and Korea. Conference Program unify the specialists from many fields of science and technology. During the Conference the results of scientific and technological researches will be presented and discussied. The conference will take place in Yekaterinburg city in July 2014."
   sign_up_registration: "Register"
   sign_up_info: "Step 1 out of 2: Create new account of the Conference participant"
   step2_apply_btn: "Submit the application (step 2)"
@@ -280,7 +280,7 @@ en:
   step2_comment_full: "( Detailed form for all participants )"
   step2_info: "Step 2 out of 2: Application submitting"
   step2_warning: "Please, check the application before submitting. After the submitting it will become unedittablte."
-  home_link: "Main page"
+  home_link: "Home page"
   application_sent: "Your application has been sent"
   application_updated_successfuly: "Your application has been updated"
   please_sign_in: "Please sign in"
