add conference info

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -264,7 +264,7 @@ en:
   home_link_home: "Home"
   home_link_conf: "About"
   home_link_prog: "Program"
-  home_link_hotel: "Accomodation"
+  home_link_hotel: "Get to the conf"
   home_link_sp: "Sponsors"
   home_link_log_out: "Log out"
   home_link_log_in: "Log in"
