--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -310,7 +310,7 @@ ru:
     home_link_home: "Главная"
     home_link_conf: "О конференции"
     home_link_prog: "Программа"
-    home_link_hotel: "Размещение"
+    home_link_hotel: "Как добраться"
     home_link_sp: "Спонсоры"
     home_link_log_out: "Выход"
     home_link_log_in: "Вход"
