--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -287,6 +287,10 @@ ru:
           conf_section: "Направление"
           conf_coauthors: "Соавторы (указываются при наличии: ФИО, место работы, должность, почта)"
           participation_type: "Тип участия"
+        message:
+          title: "Заголовок"
+          body: "Тело сообщения"
+          send_email: "Отправлять на email"
     save: "Сохранить"
     cancel: "Отменить"
     you_already_have_application: "У вас уже есть заявка на конференцию"
