--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -34,7 +34,7 @@ ru:
       updated_not_active: "Your password was changed successfully."
     registrations:
       destroyed: "Bye! Your account was successfully cancelled. We hope to see you again soon."
-      signed_up: "Позравляем! Учетная запись успешно создана. Необходимо выполнить шаг 2 - подать заявку"
+      signed_up: "Позравляем! Учетная запись успешно создана. Необходимо выполнить шаг 2 - заполнить анкету"
       signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
       signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
       signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please open the link to activate your account."
