--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -260,7 +260,7 @@ en:
   birth_date: "Birth date (YYYY-MM-DD)"
   work_specialization: "Specialization"
   conf_coauthors: "Co-Authors"
-  home_conf_antok: "Science Conference in Yekaterinburg, July 2014"
+  home_conf_antok: "AKSTS member personal page"
   home_link_home: "Home"
   home_link_conf: "About"
   home_link_prog: "Program"
@@ -271,7 +271,7 @@ en:
   home_welcome: "Welcome to 2014 Science Conference in Yekaterinberg!"
   home_lead: "Everyone can join the 2014 Science Conference including the members of korean scientific society of Russia, Associations of Korean Scientists and Engineers of the Commonwealth of Independent States, European Union and Korea. Conference Program unify the specialists from many fields of science and technology. During the Conference the results of scientific and technological researches will be presented and discussied. The conference will take place in Yekaterinburg city in July 2014."
   sign_up_registration: "Register"
-  sign_up_info: "Step 1 out of 2: Create new account of the Conference participant"
+  sign_up_info: "Step 1 out of 2: Create new account"
   step2_apply_btn: "Submit the application (step 2)"
   step2_view_btn: "Browse my application"
   step2_my_account_btn: "My account"
