--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -311,7 +311,7 @@ ru:
     birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
     work_specialization: "Специализация"
     conf_coauthors: "Соавторы"
-    home_conf_antok: "Научная конференция Екатеринбурге, июль 2014"
+    home_conf_antok: "Личный кабинет члена АНТОК"
     home_link_home: "Главная"
     home_link_conf: "О конференции"
     home_link_prog: "Программа"
@@ -321,22 +321,22 @@ ru:
     home_link_log_in: "Вход"
     home_welcome: "Добро пожаловать на научную конференцию 2014 года в Екатеринбург!"
     home_lead: "В конференции могут принять участие все желающие, в том числе члены научно-технических обществ корейцев России, а также стран СНГ, Европейского союза и Кореи. Программа конференции предусматривает возможность участия в ней специалистов из разных областей науки и техники. На конференции они смогут обсудить результаты последних научных и технологических разработок. Конференция состоится в Екатеринбурге в июле 2014 г."
-    sign_up_registration: "Регистрация на конференцию"
-    sign_up_info: "Шаг 1 из 2: Создание учетной записи участника конференции"
-    step2_apply_btn: "Подать заявку (шаг 2)"
+    sign_up_registration: "Регистрация в личном кабинете АНТОК"
+    sign_up_info: "Шаг 1 из 2: Создание учетной записи"
+    step2_apply_btn: "Заполнить анкету (шаг 2)"
     step2_view_btn: "Смотреть мою заявку"
-    step2_my_account_btn: "Моя учетная запись"
+    step2_my_account_btn: "Мой аккаунт"
     step2_title: "Заполнение заявки на конференцию"
     step2_comment_short: "( Сокращенная форма анкеты для члена АНТОК )"
     step2_comment_full: "( Расширенная форма анкеты для не членов АНТОК )"
-    step2_info: "Шаг 2 из 2: Подача заявки на участие в конференции"
+    step2_info: "Шаг 2 из 2: Заполнение анкеты"
     step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных. После сохранения анкеты, внести изменения будет не возможно."
     home_link: "На главную"
     application_sent: "Ваша заявка отправлена"
-    application_updated_successfuly: "Ваша заявка успешна сохранена"
+    application_updated_successfuly: "Ваша анкета успешна сохранена"
     please_sign_in: "Пожалуйста войдите в систему"
     your_application_details: "Информация по вашей заявке"
-    edit_your_application: "Редактирование заявки на конференцию"
+    edit_your_application: "Редактирование анкеты"
     male: "Мужской"
     female: "Женский"
     choose_value: "Выберите значение..."
