--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -324,18 +324,18 @@ ru:
     sign_up_registration: "Регистрация в личном кабинете АНТОК"
     sign_up_info: "Шаг 1 из 2: Создание учетной записи"
     step2_apply_btn: "Заполнить анкету (шаг 2)"
-    step2_view_btn: "Смотреть мою заявку"
+    step2_view_btn: "Смотреть мою анкету"
     step2_my_account_btn: "Мой аккаунт"
-    step2_title: "Заполнение заявки на конференцию"
+    step2_title: "Заполнение анкеты"
     step2_comment_short: "( Сокращенная форма анкеты для члена АНТОК )"
     step2_comment_full: "( Расширенная форма анкеты для не членов АНТОК )"
     step2_info: "Шаг 2 из 2: Заполнение анкеты"
     step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных. После сохранения анкеты, внести изменения будет не возможно."
     home_link: "На главную"
-    application_sent: "Ваша заявка отправлена"
+    application_sent: "Ваша анкета отправлена"
     application_updated_successfuly: "Ваша анкета успешна сохранена"
     please_sign_in: "Пожалуйста войдите в систему"
-    your_application_details: "Информация по вашей заявке"
+    your_application_details: "Информация по вашей анкете"
     edit_your_application: "Редактирование анкеты"
     male: "Мужской"
     female: "Женский"
