finish kofst applics

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -126,6 +126,7 @@ ru:
         accepted: нужно подтвердить
         blank: не может быть пустым
         should_be_1920_2000: должна быть от 1920 до 2000 года
+        science_specific_field_not_ok: должна соответствовать Научной сфере
         confirmation: не совпадает с подтверждением
         empty: не может быть пустым
         equal_to: может иметь лишь значение, равное %{count}
@@ -287,6 +288,47 @@ ru:
           conf_section: "Направление"
           conf_coauthors: "Соавторы (указываются при наличии: ФИО, место работы, должность, почта)"
           participation_type: "Тип участия"
+        kofst_applic:
+          avatar: "Ваше фото"
+          korean_name: "ФИО по-корейски"
+          english_name: "ФИО по-английски"
+          gender: "Пол"
+          birth_date: "Дата рождения"
+          job_type: "Тип работы"
+          job_organization: "Организация"
+          job_department: "Подразделение"
+          job_position: "Должность"
+          job_email: "Email"
+          job_phone: "Рабочий телефон"
+          science_field_id: "Научная сфера"
+          science_specific_field_id: "Уточненная научная сфера"
+          mobile: "Мобильный телефон"
+          address: "Почтовый адрес"
+          country: "Страна"
+          kofst_association: "Ассоциация"
+          nationality: "Национальность"
+          final_academic_degree: "Ученая степень"
+          e_period1: "Период образования"
+          e_degree1: "Степерь"
+          e_university1: "Университет или институт"
+          e_major1: "Специализация"
+          p_period1: "Период работы"
+          p_organization1: "Организация"
+          p_position1: "Должность"
+          p_business_in_charge1: "Сфера ответственности"
+          a_publications: "Публикации"
+          a_awards: "Академические награды"
+          a_patents: "Патенты"
+          a_research_activites: "Исследовательские достижения"
+          i_joint_research: "Совместные исследования"
+          i_research_and_consulting: "Исследования и консультирование"
+          i_job: "Работа"
+          i_starting_a_business: "Начало бизнеса"
+          i_lecture: "Чтение лекций"
+          i_internation_conference: "Международные конференции"
+          i_seminar: "Семинары"
+          i_information_interaction: "Информационное взаимодействие"
+          i_others: "Другие интересы"
         message:
           title: "Заголовок"
           body: "Тело сообщения"
@@ -373,3 +415,14 @@ ru:
     abstracts: "Тезисы для зарегистрированных участников необходимо выслать на e-mail AKSTSRussia@gmail.com до 15 мая 2014."  
     email_test: "Тестовая отправка на email"
     email_real: "Разослать на email всем участникам конференции"
+    current_job: "Текущая работа"
+    period: "Период (янв 2013 - март 2014)"
+    degree: "Диплом (бакалавр/магистр/PhD)"
+    university_or_institute: "Университет или институт"
+    major: "Специализация"
+    professional_activities: "Работа"
+    name_of_organization: "Название организации"
+    position: "Должность"
+    business_in_charge: "Сфера ответственности"
+    research_achievements: "Исследовательские достижения"
+    area_of_interest: "Ваши интересы"
