kofst applic in 2 languages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -241,6 +241,47 @@ en:
         conf_section: "Field of science (choose one)"
         conf_coauthors: "Co-authors (If applicable: Last and first namea, Affiliation, Position, E-mail address)"
         participation_type: "Full time paticipation or Distance involved"
+      kofst_applic:
+        avatar: "Photo"
+        korean_name: "Korean Name"
+        english_name: "English Name (Last name first, then given Name)"
+        gender: "Gender"
+        birth_date: "Birth Date"
+        job_type: "Type of Job"
+        job_organization: "Name of Organization"
+        job_department: "Department"
+        job_position: "Position"
+        job_email: "E-mail"
+        job_phone: "Office Phone"
+        science_field_id: "Field"
+        science_specific_field_id: "Specific Field"
+        mobile: "Mobile"
+        address: "Address"
+        country: "Country"
+        kofst_association: "Association"
+        nationality: "Nationality"
+        final_academic_degree: "Final Academic Degree"
+        e_period1: "Period"
+        e_degree1: "Degree"
+        e_university1: "University or Institute"
+        e_major1: "Major"
+        p_period1: "Period"
+        p_organization1: "Name of Organization"
+        p_position1: "Position"
+        p_business_in_charge1: "Business in Charge"
+        a_publications: "Publications"
+        a_awards: "Academic Awards or Honors"
+        a_patents: "Patents"
+        a_research_activites: "Research Activities"
+        i_joint_research: "Joint Research"
+        i_research_and_consulting: "Research and Consulting"
+        i_job: "Job"
+        i_starting_a_business: "Starting a business"
+        i_lecture: "Lecture"
+        i_internation_conference: "Internation Conference"
+        i_seminar: "Seminar"
+        i_information_interaction: "Information interaction"
+        i_others: "Others"        
   save: "Save"
   cancel: "Cancel"
   you_already_have_application: "You already have application"
@@ -319,4 +360,7 @@ en:
   back: "Back"
   application_id_number: "Your application number"
   questions_application: "If you have question or wish to correnct the application email to AKSTSRussia@gmail.com"
-  abstracts: "Abstracts for registered participants should be submitted by e-mail AKSTSRussia@gmail.com until the 15th of May 2014. Template for the Abstracts enclosed."  
+  abstracts: "Abstracts for registered participants should be submitted by e-mail AKSTSRussia@gmail.com until the 15th of May 2014. Template for the Abstracts enclosed."
+  area_of_interest: "Area of Interest (multiple choise)"
+  welcome_myaksts: "Welcome to personal AKSTS member page!"
+  or: "or"
