--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -290,15 +290,15 @@ ru:
           participation_type: "Тип участия"
         kofst_applic:
           avatar: "Ваше фото"
-          korean_name: "ФИО по-корейски"
-          english_name: "ФИО по-английски"
+          korean_name: "Фамилия и имя на корейском"
+          english_name: "Фамилия и имя на английском"
           gender: "Пол"
           birth_date: "Дата рождения"
           job_type: "Тип работы"
-          job_organization: "Организация"
+          job_organization: "Название организации"
           job_department: "Подразделение"
           job_position: "Должность"
-          job_email: "Email"
+          job_email: "E-mail"
           job_phone: "Рабочий телефон"
           science_field_id: "Научная сфера"
           science_specific_field_id: "Уточненная научная сфера"
@@ -308,12 +308,12 @@ ru:
           kofst_association: "Ассоциация"
           nationality: "Национальность"
           final_academic_degree: "Ученая степень"
-          e_period1: "Период образования"
-          e_degree1: "Степерь"
+          e_period1: "Период"
+          e_degree1: "Диплом (бакалавр/магистр/PhD)"
           e_university1: "Университет или институт"
           e_major1: "Специализация"
-          p_period1: "Период работы"
-          p_organization1: "Организация"
+          p_period1: "Период"
+          p_organization1: "Название организации"
           p_position1: "Должность"
           p_business_in_charge1: "Сфера ответственности"
           a_publications: "Публикации"
@@ -372,7 +372,7 @@ ru:
     step2_comment_short: "( Сокращенная форма анкеты для члена АНТОК )"
     step2_comment_full: "( Расширенная форма анкеты для не членов АНТОК )"
     step2_info: "Шаг 2 из 2: Заполнение анкеты"
-    step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных. После сохранения анкеты, внести изменения будет не возможно."
+    step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных. После сохранения, внести изменения будет нельзя."
     home_link: "На главную"
     application_sent: "Ваша анкета отправлена"
     application_updated_successfuly: "Ваша анкета успешна сохранена"
@@ -425,4 +425,6 @@ ru:
     position: "Должность"
     business_in_charge: "Сфера ответственности"
     research_achievements: "Исследовательские достижения"
-    area_of_interest: "Ваши интересы"
+    area_of_interest: "Ваши интересы (можно выбрать несколько)"
+    welcome_myaksts: "Добро пожаловать в личный кабинет АНТОК!"
+    or: "или"
