--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -301,7 +301,7 @@ en:
   birth_date: "Birth date (YYYY-MM-DD)"
   work_specialization: "Specialization"
   conf_coauthors: "Co-Authors"
-  home_conf_antok: "AKSTS member personal page"
+  home_conf_antok: "AKSTS Member Site"
   home_link_home: "Home"
   home_link_conf: "About"
   home_link_prog: "Program"
