process for not member

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -365,12 +365,15 @@ ru:
     home_lead: "В конференции могут принять участие все желающие, в том числе члены научно-технических обществ корейцев России, а также стран СНГ, Европейского союза и Кореи. Программа конференции предусматривает возможность участия в ней специалистов из разных областей науки и техники. На конференции они смогут обсудить результаты последних научных и технологических разработок. Конференция состоится в Екатеринбурге в июле 2014 г."
     sign_up_registration: "Регистрация в личном кабинете АНТОК"
     sign_up_info: "Шаг 1 из 3: Создание учетной записи"
+    step1_view_btn: "Смотреть мой аккаунт (шаг 1)"
     step2_apply_btn: "Заполнить анкету (шаг 2)"
-    step2_view_btn: "Смотреть мою анкету"
+    step2_view_btn: "Смотреть мою анкету (шаг 2)"
     step2_my_account_btn: "Мой аккаунт"
     step2_title: "Заполнение анкеты"
     step2_info: "Шаг 2 из 3: Заполнение персональной анкеты"
     step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных. После сохранения, внести изменения будет нельзя."
+    step3_apply_btn: "Заполнить заявку на конференцию (шаг 3)"
+    step3_view_btn: "Смотреть заявку на конференцию (шаг 3)"
     step3_info: "Шаг 3 из 3: Заполнение заявки на конференцию"
     step3_title: "Заполнение заявки на конференцию"
     home_link: "На главную"
