--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -313,12 +313,15 @@ en:
   home_lead: "Everyone can join the 2014 Science Conference including the members of korean scientific society of Russia, Associations of Korean Scientists and Engineers of the Commonwealth of Independent States, European Union and Korea. Conference Program unify the specialists from many fields of science and technology. During the Conference the results of scientific and technological researches will be presented and discussied. The conference will take place in Yekaterinburg city in July 2014."
   sign_up_registration: "Register"
   sign_up_info: "Step 1 out of 3: Create new account"
-  step2_apply_btn: "Submit the application (step 2)"
-  step2_view_btn: "Browse my application"
+  step1_view_btn: "Browse my account (step 1)"
+  step2_apply_btn: "Submit personal application (step 2)"
+  step2_view_btn: "Browse personal application (step 2)"
   step2_my_account_btn: "My account"
   step2_title: "Personal application filling out"
   step2_info: "Step 2 out of 3: Personal application submitting"
   step2_warning: "Please, check the application before submitting. After the submitting it will become unedittablte."
+  step3_apply_btn: "Submit for conference (step 3)"
+  step3_view_btn: "Browse conference application (step 3)"
   step3_info: "Step 3 out of 3: Conference application submitting"
   step3_title: "Conference application filling out"
   home_link: "Home page"
